# ghost-patch

./: .env.example  .gitignore  CLAUDE.md  README.md  client.py  fetch_runbugrun.py  filter_bank.py  grading.py  m0.py  m1.py  m2.py  m3.py  m4.py  pilot.py  prompts.py  pyproject.toml  regions.py  sandbox.py  stats.py  test_filter_bank.py  test_grading.py  test_m0.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_probe_v2.py  test_prompts.py  test_regions.py  test_sandbox.py  test_stats.py
.claude/: operating-constraints.md
.claude/commands/: autonomous-milestone.md  begin.md  boot_server.md  brainstorm.md  catchup.md  claudify-repo.md  envsetup.md  explore-plan.md  handoff.md  mock-sql-audio.md  mock-sql-demo.md  mock-sql-interview.md  prompt-optimize.md  reframe-orchestrator.md  screenshot-iterate.md  smoke-test.md  tdd.md  trim-context.md  wrap.md
data/: bank.json  m1_results.json  m2_results.json  m3_results.json  m4_results.json  pilot_results.json  pool.json  smoke_results.json
data/m1/: cost_ledger.json  instructions.json  trials.jsonl
data/m2/: cost_ledger.json  subsets.json  trials.jsonl
data/m3/: cost_ledger.json  extension_instructions.json  extension_trials.jsonl  subsets.json  trials.jsonl
data/m4/: cost_ledger.json  subsets.json  trials.jsonl
data/pilot/: cost_ledger.json  instructions.json  ping.json  probe_audit.json  trials.jsonl
docs/: KICKOFF.md  M0-BRIEF.md  M0-SPOTREAD.md  M1-BRIEF.md  M1-SPOTREAD.md  M2-BRIEF.md  M3-BRIEF.md  M3-SPOTREAD.md  M4-BRIEF.md
docs/paper/: ghost-patch-paper.md  ghost-patch-presenter-pack.md
(+20 files in other folders)
