[project]
name = "ghost-patch"
version = "0.1.0"
description = "Hobby-scale reproduction of Obey, Diverge, Collapse (arXiv 2607.04537): code LLMs flag a wrong-location repair instruction as incorrect, follow it anyway, compound Ghost Errors, and end irrecoverable."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
# Application, not a distributable package — run things with `uv run ...`.
package = false
